<resources>
    <string name="app_name">Sehat</string>
    <string name="title_pedometer">Pedometer</string>
    <string name="title_heart_rate">Heart Rate</string>
    <string name="title_women_health">Women Health</string>
    <string name="title_meditation">Meditation</string>
    <string name="title_settings">Settings</string>
    <string name="steps">Steps</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="start_monitoring">Start Measurement</string>
    <string name="stop_monitoring">Stop Measurement</string>
    <string name="bpm_placeholder">0 BPM</string>
    <string name="bpm">BPM</string>
    <string name="initial_count">---</string>
    <string name="to_calculate_bmi_and_calories_burnt">To Calculate BMI and calories burnt</string>
    <string name="personal_information">Personal Information</string>
    <string name="step_goals_sensitivity_step_length">Step Goals, Sensitivity, Step length</string>
    <string name="measurement_duration">Measurement duration</string>
    <string name="import_export">Import/Export</string>
    <string name="data">Data</string>
    <string name="notifications">Notifications</string>
    <string name="control_what_gets_notified_to_you">Control what gets notified to you</string>
    <string name="heart_rate_monitor_settings">Heart Rate Monitor Settings</string>
    <string name="pedometer_settings">Pedometer Settings</string>
    <string name="stop">Stop</string>
    <string name="calories">Calories</string>
    <string name="heart_rate_placeholder">---</string>
    <string name="error_detecting_heart_rate">!!!\n</string>
    <string name="we_prioritize_your_privacy_and_security_all_data_processed_by_this_application_is_stored_locally_on_your_device_and_is_not_transmitted_or_shared_externally_additionally_any_sensitive_data_is_fully_encrypted_to_protect_against_unauthorized_access_your_information_remains_secure_and_private_at_all_times">We prioritize your privacy and security. All data processed by this application is stored locally on your device and is not transmitted or shared externally. Additionally, any sensitive data is fully encrypted to protect against unauthorized access. Your information remains secure and private at all times.</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="daily_step_goal">Daily Step Goal</string>
    <string name="pedometer_sensitivity">Pedometer Sensitivity</string>
    <string name="pedometer_sensitivity_recommendation">For accurate measurement, we recommend setting the sensitivity to Low or Medium.</string>
    <string name="hrm_sensitivity_recommendation">For optimal performance, set the duration based on your activity intensity:\n    - 2 seconds for high-intensity, real-time monitoring.\n    - 3 seconds for moderate-intensity or general use.\n    - 5 seconds for resting heart rate or low-intensity measurements.</string>
    <string name="hrm_duration_recommendation">For accurate heart rate measurement:\n    - Measure the pulse for 15 seconds and multiply by 4 to get the beats per minute (bpm).\n    - Alternatively, measure for 30 seconds and multiply by 2.\n    - For higher accuracy or irregular pulses, measure for a full 60 seconds.</string>
    <string name="heart_rate_measurement_duration">Heart Rate Measurement Duration (Sec)</string>
    <string name="invalid_data">Not enough data</string>
    <string name="bmi_result">Your BMI:</string>
    <string name="step_recommendation">- For a healthy heart, we recommend walking at least 10,000 steps per day or engaging in 30-60 minutes of brisk walking daily. \n- Aim for a moderate intensity where you can talk but not sing comfortably. For additional benefits, include uphill or power walking.\n- Consistency is key—walk most days of the week to strengthen your heart and improve overall cardiovascular health.</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="football">Football</string>
    <string name="cycling">Cycling</string>
    <string name="sex">Sex</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="activity_performed">Activity performed</string>
    <string name="heart_rate_sensitivity">Heart Rate Sensitivity</string>
    <string name="delete">Delete</string>
    <string name="delete_warning">Are you Sure?\nOnce deleted, the item cannot be recoverd back.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="resting">Resting</string>
    <string name="name">Name</string>
</resources>