<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_pedometer"
        android:icon="@drawable/ic_walking"
        android:title="@string/title_pedometer" />

    <item
        android:id="@+id/navigation_heartRate"
        android:icon="@drawable/ic_heart"
        android:title="@string/title_heart_rate" />

    <item
        android:id="@+id/navigation_meditation"
        android:icon="@drawable/ic_meditation_man"
        android:title="@string/title_meditation" />

    <item
        android:id="@+id/navigation_women_health"
        android:icon="@drawable/ic_menstruation"
        android:title="@string/title_women_health" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/title_settings" />

</menu>