<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".pedometer.view.PedometerFragment">

    <LinearLayout
        android:id="@+id/ll_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_button_cornered_solid_red"
        android:backgroundTint="@color/light_grey"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">
        <ImageButton
            android:id="@+id/iv_history"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_history_24"
            android:backgroundTint="#00000000"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_stepsTaken"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/bg_circular"
        android:textAlignment="center"
        android:textSize="50sp"
        android:text="@string/initial_count"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_goalSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/calories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_distance"
        app:layout_constraintTop_toBottomOf="@id/tv_stepsTaken" />

    <TextView
        android:id="@+id/tv_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/distance"
        app:layout_constraintStart_toEndOf="@id/tv_calories"
        app:layout_constraintEnd_toStartOf="@id/tv_duration"
        app:layout_constraintTop_toBottomOf="@id/tv_stepsTaken" />

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_distance"
        app:layout_constraintTop_toBottomOf="@id/tv_stepsTaken" />

    <Button
        android:id="@+id/btn_startStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:minHeight="50dp"
        android:background="@drawable/bg_button_cornered_solid_red"
        android:text="@string/start"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_distance"
        app:layout_constraintStart_toStartOf="@id/tv_stepsTaken"
        app:layout_constraintEnd_toStartOf="@+id/btn_reset"
        />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:minHeight="50dp"
        android:background="@drawable/bg_button_hollow_green_border"
        android:text="@string/reset"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_distance"
        app:layout_constraintEnd_toEndOf="@id/tv_stepsTaken"
        app:layout_constraintStart_toEndOf="@+id/btn_startStop"
        />

    <TextView
        android:id="@+id/tv_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_hollow_green_border"
        app:backgroundTint="@color/dark_grey"
        android:paddingHorizontal="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="82dp"
        android:text="BMI Reading"/>
</androidx.constraintlayout.widget.ConstraintLayout>